07.HPA/3.Retail_Microservices_Topology/MicroServices/Ingress/Ingress.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-http-ip-mode
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: bhavin-http-ip-mode-ingress
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

     # Add SSL Cert 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:454143665149:certificate/ea915a2f-005f-4af8-af7a-a9146d131ca5

    alb.ingress.kubernetes.io/ssl-redirect: "443"

# External DNS Annotation
    external-dns.alpha.kubernetes.io/hostname: karpenter.bhavindevops.shop

    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: alb 
  defaultBackend:
    service:
      name: ui
      port:
        number: 80
